Alterado nome de métodos, terminado método de criar/sobrescrever, abrir e adicionado salvar e salvar como. adicionado referência ao nome do aplicativo